--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <p class="words">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, ipsum officiis tempora in pariatur, animi voluptatum consectetur, ex iusto cum suscipit delectus dignissimos asperiores enim. Ab quam nemo perspiciatis nam quo, sapiente hic ea pariatur fuga voluptate eum, praesentium ducimus? Tempora itaque adipisci sint optio, deleniti enim quos porro quaerat repellat autem quod ad dolorum vero? Rerum placeat eos velit veritatis fuga exercitationem perferendis quam error perspiciatis consequatur, quis recusandae numquam explicabo similique tempora quas facere! Autem reiciendis dolores ea veritatis aliquam ipsum laborum nemo minus optio sed commodi, corrupti iusto voluptates debitis. Sint veniam sapiente, doloremque voluptatum fugit dolorum odio accusamus architecto explicabo quos vitae labore praesentium quis quia, facere iure similique repellendus culpa non temporibus cupiditate corrupti. Accusamus dolorem a culpa recusandae ab doloremque nisi beatae, temporibus optio dolores ipsum et dolorum quaerat porro quasi iusto molestias sit fugiat labore laborum odio veniam. Eos, recusandae reprehenderit? Esse quibusdam porro modi reprehenderit harum quam repudiandae earum labore neque, illum quidem soluta aspernatur repellendus molestias beatae necessitatibus facilis quos officiis quod. Error ea laborum unde minus, earum rerum pariatur harum magni, officia placeat iure aliquam voluptatem, nemo obcaecati tenetur non dolorem aliquid fugiat temporibus minima maiores nisi ex aperiam a.</p>
     
     <ul>
-        <li><a href="/pages/about.html">CLICK TO SEE MORE ABOUT US</a></li>
-        <li><a href="/pages/contact.html">CONTANT US PAGE</a></li>
         <li><a href="/pages/services.html">OUR SERVICES</a></li>
+        <li><a href="./pages/contact.html">CONTANT US PAGE</a></li>
+        <li><a href="./pages/about.html">CLICK TO SEE MORE ABOUT US</a></li>
     </ul>
 </body>
 </html>
